2002/02/27 Jean-Marc Valin:
Got the basic encoder working as a demo with quantization only on some 
parameters.